--- a/contact.html
+++ b/contact.html
@@ -3,7 +3,64 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Contact Us - K.H. Infinity</title>
+    <title>
+      Contact K.H. Infinity | Global Trade Solutions - Import Export Company
+      Bangladesh
+    </title>
+
+    <!-- Primary Meta Tags -->
+    <meta
+      name="description"
+      content="Get in touch with K.H. Infinity for all your import-export needs. Contact our team for inquiries about our products and services. Located in Dhaka, Bangladesh."
+    />
+    <meta
+      name="keywords"
+      content="contact K.H. Infinity, import export contact, global trade contact, Bangladesh trade contact, business inquiry"
+    />
+    <meta name="author" content="K.H. Infinity" />
+    <meta name="robots" content="index, follow" />
+
+    <!-- Open Graph / Facebook -->
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://khi.com.bd/contact" />
+    <meta
+      property="og:title"
+      content="Contact K.H. Infinity | Global Trade Solutions"
+    />
+    <meta
+      property="og:description"
+      content="Get in touch with K.H. Infinity for all your import-export needs. Contact our team for inquiries about our products and services. Located in Dhaka, Bangladesh."
+    />
+    <meta
+      property="og:image"
+      content="https://khi.com.bd/images/cover/kh1.webp"
+    />
+
+    <!-- Twitter -->
+    <meta property="twitter:card" content="summary_large_image" />
+    <meta property="twitter:url" content="https://khi.com.bd/contact" />
+    <meta
+      property="twitter:title"
+      content="Contact K.H. Infinity | Global Trade Solutions"
+    />
+    <meta
+      property="twitter:description"
+      content="Get in touch with K.H. Infinity for all your import-export needs. Contact our team for inquiries about our products and services. Located in Dhaka, Bangladesh."
+    />
+    <meta
+      property="twitter:image"
+      content="https://khi.com.bd/images/cover/kh1.webp"
+    />
+
+    <!-- Favicon -->
+    <link rel="icon" type="image/x-icon" href="/images/favicon.ico" />
+    <link
+      rel="apple-touch-icon"
+      sizes="180x180"
+      href="/images/apple-touch-icon.png"
+    />
+
+    <!-- Stylesheets -->
     <script src="https://cdn.tailwindcss.com"></script>
     <link rel="stylesheet" href="css/style.css" />
     <link rel="stylesheet" href="css/mobile.css" />
@@ -11,6 +68,55 @@
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css"
     />
+
+    <!-- Schema.org markup -->
+    <script type="application/ld+json">
+      {
+        "@context": "https://schema.org",
+        "@type": "ContactPage",
+        "name": "Contact K.H. Infinity",
+        "description": "Get in touch with K.H. Infinity for all your import-export needs.",
+        "url": "https://khi.com.bd/contact",
+        "mainEntity": {
+          "@type": "Organization",
+          "name": "K.H. Infinity",
+          "address": {
+            "@type": "PostalAddress",
+            "streetAddress": "Kader Tropical Height, Shop- G5, 10 Hatkhola Road, Tikatuli, Wari",
+            "addressLocality": "Dhaka",
+            "postalCode": "1203",
+            "addressCountry": "Bangladesh"
+          },
+          "contactPoint": {
+            "@type": "ContactPoint",
+            "telephone": "+880 1577081856",
+            "contactType": "customer service",
+            "email": "info@khi.com.bd",
+            "availableLanguage": ["English", "Bengali"]
+          },
+          "openingHoursSpecification": [
+            {
+              "@type": "OpeningHoursSpecification",
+              "dayOfWeek": [
+                "Monday",
+                "Tuesday",
+                "Wednesday",
+                "Thursday",
+                "Friday"
+              ],
+              "opens": "09:00",
+              "closes": "18:00"
+            },
+            {
+              "@type": "OpeningHoursSpecification",
+              "dayOfWeek": "Saturday",
+              "opens": "10:00",
+              "closes": "16:00"
+            }
+          ]
+        }
+      }
+    </script>
   </head>
   <body class="font-sans bg-gray-50" data-theme="gray">
     <!-- Header -->
@@ -128,7 +234,7 @@
                   ></i>
                   <div>
                     <h4 class="font-bold mb-1">Email</h4>
-                    <p class="text-gray-600">info@khinfinity.com</p>
+                    <p class="text-gray-600">info@khi.com.bd</p>
                   </div>
                 </div>
               </div>
@@ -141,15 +247,11 @@
               </h3>
               <ul class="space-y-3">
                 <li class="flex justify-between">
-                  <span class="text-gray-600">Monday - Friday</span>
-                  <span class="font-bold">9:00 AM - 6:00 PM</span>
+                  <span class="text-gray-600">Thursday - Tuesday</span>
+                  <span class="font-bold">9:00 AM - 8:00 PM</span>
                 </li>
                 <li class="flex justify-between">
-                  <span class="text-gray-600">Saturday</span>
-                  <span class="font-bold">10:00 AM - 4:00 PM</span>
-                </li>
-                <li class="flex justify-between">
-                  <span class="text-gray-600">Sunday</span>
+                  <span class="text-gray-600">Wednesday</span>
                   <span class="font-bold">Closed</span>
                 </li>
               </ul>
@@ -199,7 +301,16 @@
           Find Us
         </h2>
         <div class="h-96 bg-white rounded-lg shadow-md overflow-hidden">
-          <div id="map" class="w-full h-full"></div>
+          <div id="map" class="w-full h-full">
+            <iframe
+              src="https://maps.google.com/maps?width=600&amp;height=400&amp;hl=en&amp;q=Kader Tropical Height, Shop- G5, 10 Hatkhola Road, Tikatuli, Wari, Dhaka 1203, Bangladesh&amp;t=&amp;z=15&amp;ie=UTF8&amp;iwloc=B&amp;output=embed"
+              width="100%"
+              height="450"
+              style="border: 0"
+              allowfullscreen=""
+              loading="lazy"
+            ></iframe>
+          </div>
         </div>
       </div>
     </section>
@@ -211,7 +322,7 @@
     <script src="js/products-data.js"></script>
     <script src="js/components.js"></script>
     <script
-      src="https://maps.googleapis.com/maps/api/js?key=YOUR_API_KEY&callback=initMap"
+      src="https://maps.googleapis.com/maps/api/js?key=AIzaSyATiwGpX8D8m_aNhFB5kQezB7Ji3-6n-Q8&callback=initMap"
       async
       defer
     ></script>
