--- a/products.html
+++ b/products.html
@@ -3,16 +3,63 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Our Products - K.H. Infinity | Global Trade Solutions</title>
+    <title>
+      Premium Import & Export Products - K.H. Infinity | Global Trade Solutions
+    </title>
+
+    <!-- Primary Meta Tags -->
     <meta
       name="description"
-      content="Premium quality products from K.H. Infinity. Explore our range of oils, dairy products, spices, and more."
+      content="Explore our premium range of import and export products including sunflower oil, milk powder, pulses, sugar, and more. High-quality products sourced from trusted global suppliers."
     />
     <meta
       name="keywords"
-      content="products, import export, K.H. Infinity, trade"
+      content="import products, export products, sunflower oil, milk powder, pulses, sugar, chickpeas, cumin, tarpaulin, K.H. Infinity, Bangladesh trade"
     />
+    <meta name="author" content="K.H. Infinity" />
+    <meta name="robots" content="index, follow" />
+
+    <!-- Open Graph / Facebook -->
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://khi.com.bd/products" />
+    <meta
+      property="og:title"
+      content="Premium Import & Export Products - K.H. Infinity"
+    />
+    <meta
+      property="og:description"
+      content="Explore our premium range of import and export products including sunflower oil, milk powder, pulses, sugar, and more. High-quality products sourced from trusted global suppliers."
+    />
+    <meta
+      property="og:image"
+      content="https://khi.com.bd/images/cover/kh1.webp"
+    />
+
+    <!-- Twitter -->
+    <meta property="twitter:card" content="summary_large_image" />
+    <meta property="twitter:url" content="https://khi.com.bd/products" />
+    <meta
+      property="twitter:title"
+      content="Premium Import & Export Products - K.H. Infinity"
+    />
+    <meta
+      property="twitter:description"
+      content="Explore our premium range of import and export products including sunflower oil, milk powder, pulses, sugar, and more. High-quality products sourced from trusted global suppliers."
+    />
+    <meta
+      property="twitter:image"
+      content="https://khi.com.bd/images/cover/kh1.webp"
+    />
+
+    <!-- Favicon -->
     <link rel="icon" type="image/x-icon" href="/images/favicon.ico" />
+    <link
+      rel="apple-touch-icon"
+      sizes="180x180"
+      href="/images/apple-touch-icon.png"
+    />
+
+    <!-- Stylesheets -->
     <script src="https://cdn.tailwindcss.com"></script>
     <link rel="stylesheet" href="css/style.css" />
     <link rel="stylesheet" href="css/mobile.css" />
@@ -20,6 +67,72 @@
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css"
     />
+
+    <!-- Schema.org markup -->
+    <script type="application/ld+json">
+      {
+        "@context": "https://schema.org",
+        "@type": "CollectionPage",
+        "name": "Premium Import & Export Products",
+        "description": "Explore our premium range of import and export products.",
+        "url": "https://khi.com.bd/products",
+        "mainEntity": {
+          "@type": "ItemList",
+          "itemListElement": [
+            {
+              "@type": "ListItem",
+              "position": 1,
+              "item": {
+                "@type": "Product",
+                "name": "Sunflower Oil",
+                "description": "Premium quality sunflower seed oil with high nutritional value.",
+                "url": "https://khi.com.bd/products/sunflower-oil",
+                "image": "https://khi.com.bd/images/products/sunflower-oil.webp"
+              }
+            },
+            {
+              "@type": "ListItem",
+              "position": 2,
+              "item": {
+                "@type": "Product",
+                "name": "Skimmed Milk Powder",
+                "description": "High-quality skimmed milk powder with excellent nutritional value.",
+                "url": "https://khi.com.bd/products/milk-powder",
+                "image": "https://khi.com.bd/images/products/milk-powder.webp"
+              }
+            },
+            {
+              "@type": "ListItem",
+              "position": 3,
+              "item": {
+                "@type": "Product",
+                "name": "Premium Pulses",
+                "description": "High-quality pulses including lentils and chickpeas.",
+                "url": "https://khi.com.bd/products/pulses",
+                "image": "https://khi.com.bd/images/products/pulses.webp"
+              }
+            }
+          ]
+        },
+        "breadcrumb": {
+          "@type": "BreadcrumbList",
+          "itemListElement": [
+            {
+              "@type": "ListItem",
+              "position": 1,
+              "name": "Home",
+              "item": "https://khi.com.bd"
+            },
+            {
+              "@type": "ListItem",
+              "position": 2,
+              "name": "Products",
+              "item": "https://khi.com.bd/products"
+            }
+          ]
+        }
+      }
+    </script>
   </head>
   <body class="font-sans bg-gray-50" data-theme="gray">
     <!-- Header -->
