--- a/products/chickpeas.html
+++ b/products/chickpeas.html
@@ -3,16 +3,66 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Premium Chickpeas - K.H. Infinity | Natural Legumes</title>
+    <title>
+      Premium Chickpeas - K.H. Infinity | High Quality Pulses & Legumes
+    </title>
+
+    <!-- Primary Meta Tags -->
     <meta
       name="description"
-      content="High-quality chickpeas with exceptional taste and texture. Premium grade legumes perfect for various culinary applications."
+      content="Premium quality chickpeas with exceptional taste and nutritional value. High-protein legumes perfect for various culinary applications. Available in bulk and retail packaging."
     />
     <meta
       name="keywords"
-      content="chickpeas, garbanzo beans, legumes, pulses, K.H. Infinity, import"
+      content="chickpeas, garbanzo beans, pulses, legumes, protein-rich food, bulk chickpeas, K.H. Infinity, import, Bangladesh"
     />
+    <meta name="author" content="K.H. Infinity" />
+    <meta name="robots" content="index, follow" />
+
+    <!-- Open Graph / Facebook -->
+    <meta property="og:type" content="product" />
+    <meta property="og:url" content="https://khi.com.bd/products/chickpeas" />
+    <meta
+      property="og:title"
+      content="Premium Chickpeas - K.H. Infinity | High Quality Pulses"
+    />
+    <meta
+      property="og:description"
+      content="Premium quality chickpeas with exceptional taste and nutritional value. High-protein legumes perfect for various culinary applications. Available in bulk and retail packaging."
+    />
+    <meta
+      property="og:image"
+      content="https://khi.com.bd/images/products/chick-pea.webp"
+    />
+
+    <!-- Twitter -->
+    <meta property="twitter:card" content="summary_large_image" />
+    <meta
+      property="twitter:url"
+      content="https://khi.com.bd/products/chickpeas"
+    />
+    <meta
+      property="twitter:title"
+      content="Premium Chickpeas - K.H. Infinity | High Quality Pulses"
+    />
+    <meta
+      property="twitter:description"
+      content="Premium quality chickpeas with exceptional taste and nutritional value. High-protein legumes perfect for various culinary applications. Available in bulk and retail packaging."
+    />
+    <meta
+      property="twitter:image"
+      content="https://khi.com.bd/images/products/chick-pea.webp"
+    />
+
+    <!-- Favicon -->
     <link rel="icon" type="image/x-icon" href="/images/favicon.ico" />
+    <link
+      rel="apple-touch-icon"
+      sizes="180x180"
+      href="/images/apple-touch-icon.png"
+    />
+
+    <!-- Stylesheets -->
     <script src="https://cdn.tailwindcss.com"></script>
     <link rel="stylesheet" href="../css/style.css" />
     <link rel="stylesheet" href="../css/mobile.css" />
@@ -20,6 +70,67 @@
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css"
     />
+
+    <!-- Schema.org markup -->
+    <script type="application/ld+json">
+      {
+        "@context": "https://schema.org",
+        "@type": "Product",
+        "name": "Premium Chickpeas",
+        "image": "https://khi.com.bd/images/products/chick-pea.webp",
+        "description": "Premium quality chickpeas with exceptional taste and nutritional value.",
+        "brand": {
+          "@type": "Brand",
+          "name": "K.H. Infinity"
+        },
+        "offers": {
+          "@type": "AggregateOffer",
+          "priceCurrency": "USD",
+          "availability": "https://schema.org/InStock",
+          "seller": {
+            "@type": "Organization",
+            "name": "K.H. Infinity"
+          }
+        },
+        "nutrition": {
+          "@type": "NutritionInformation",
+          "calories": "364 kcal",
+          "proteinContent": "15g",
+          "fatContent": "6g",
+          "carbohydrateContent": "61g",
+          "fiberContent": "17g",
+          "servingSize": "100g"
+        },
+        "aggregateRating": {
+          "@type": "AggregateRating",
+          "ratingValue": "4.8",
+          "reviewCount": "150"
+        },
+        "breadcrumb": {
+          "@type": "BreadcrumbList",
+          "itemListElement": [
+            {
+              "@type": "ListItem",
+              "position": 1,
+              "name": "Home",
+              "item": "https://khi.com.bd"
+            },
+            {
+              "@type": "ListItem",
+              "position": 2,
+              "name": "Products",
+              "item": "https://khi.com.bd/products"
+            },
+            {
+              "@type": "ListItem",
+              "position": 3,
+              "name": "Chickpeas",
+              "item": "https://khi.com.bd/products/chickpeas"
+            }
+          ]
+        }
+      }
+    </script>
   </head>
   <body class="font-sans bg-stone-50" data-theme="stone">
     <!-- Header -->
