--- a/products/cumin.html
+++ b/products/cumin.html
@@ -3,16 +3,63 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Premium Cumin - K.H. Infinity | Aromatic Spices</title>
+    <title>
+      Premium Cumin Seeds - K.H. Infinity | High Quality Spices & Seasonings
+    </title>
+
+    <!-- Primary Meta Tags -->
     <meta
       name="description"
-      content="High-quality cumin seeds with exceptional aroma and flavor. Premium grade spices perfect for culinary excellence."
+      content="Premium quality cumin seeds with exceptional aroma and flavor. Natural spices sourced from trusted producers, perfect for culinary excellence and food processing."
     />
     <meta
       name="keywords"
-      content="cumin, cumin seeds, spices, seasonings, K.H. Infinity, import"
+      content="cumin seeds, jeera, spices, seasonings, bulk spices, natural spices, K.H. Infinity, import, Bangladesh"
     />
+    <meta name="author" content="K.H. Infinity" />
+    <meta name="robots" content="index, follow" />
+
+    <!-- Open Graph / Facebook -->
+    <meta property="og:type" content="product" />
+    <meta property="og:url" content="https://khi.com.bd/products/cumin" />
+    <meta
+      property="og:title"
+      content="Premium Cumin Seeds - K.H. Infinity | High Quality Spices"
+    />
+    <meta
+      property="og:description"
+      content="Premium quality cumin seeds with exceptional aroma and flavor. Natural spices sourced from trusted producers, perfect for culinary excellence and food processing."
+    />
+    <meta
+      property="og:image"
+      content="https://khi.com.bd/images/products/cumin.webp"
+    />
+
+    <!-- Twitter -->
+    <meta property="twitter:card" content="summary_large_image" />
+    <meta property="twitter:url" content="https://khi.com.bd/products/cumin" />
+    <meta
+      property="twitter:title"
+      content="Premium Cumin Seeds - K.H. Infinity | High Quality Spices"
+    />
+    <meta
+      property="twitter:description"
+      content="Premium quality cumin seeds with exceptional aroma and flavor. Natural spices sourced from trusted producers, perfect for culinary excellence and food processing."
+    />
+    <meta
+      property="twitter:image"
+      content="https://khi.com.bd/images/products/cumin.webp"
+    />
+
+    <!-- Favicon -->
     <link rel="icon" type="image/x-icon" href="/images/favicon.ico" />
+    <link
+      rel="apple-touch-icon"
+      sizes="180x180"
+      href="/images/apple-touch-icon.png"
+    />
+
+    <!-- Stylesheets -->
     <script src="https://cdn.tailwindcss.com"></script>
     <link rel="stylesheet" href="../css/style.css" />
     <link rel="stylesheet" href="../css/mobile.css" />
@@ -20,6 +67,67 @@
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css"
     />
+
+    <!-- Schema.org markup -->
+    <script type="application/ld+json">
+      {
+        "@context": "https://schema.org",
+        "@type": "Product",
+        "name": "Premium Cumin Seeds",
+        "image": "https://khi.com.bd/images/products/cumin.webp",
+        "description": "Premium quality cumin seeds with exceptional aroma and flavor.",
+        "brand": {
+          "@type": "Brand",
+          "name": "K.H. Infinity"
+        },
+        "offers": {
+          "@type": "AggregateOffer",
+          "priceCurrency": "USD",
+          "availability": "https://schema.org/InStock",
+          "seller": {
+            "@type": "Organization",
+            "name": "K.H. Infinity"
+          }
+        },
+        "nutrition": {
+          "@type": "NutritionInformation",
+          "calories": "375 kcal",
+          "proteinContent": "17.8g",
+          "fatContent": "22.3g",
+          "carbohydrateContent": "44.2g",
+          "fiberContent": "10.5g",
+          "servingSize": "100g"
+        },
+        "aggregateRating": {
+          "@type": "AggregateRating",
+          "ratingValue": "4.7",
+          "reviewCount": "120"
+        },
+        "breadcrumb": {
+          "@type": "BreadcrumbList",
+          "itemListElement": [
+            {
+              "@type": "ListItem",
+              "position": 1,
+              "name": "Home",
+              "item": "https://khi.com.bd"
+            },
+            {
+              "@type": "ListItem",
+              "position": 2,
+              "name": "Products",
+              "item": "https://khi.com.bd/products"
+            },
+            {
+              "@type": "ListItem",
+              "position": 3,
+              "name": "Cumin Seeds",
+              "item": "https://khi.com.bd/products/cumin"
+            }
+          ]
+        }
+      }
+    </script>
   </head>
   <body class="font-sans bg-orange-50" data-theme="orange">
     <!-- Header -->
