--- a/products/handicrafts.html
+++ b/products/handicrafts.html
@@ -3,16 +3,67 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Traditional Handicrafts - K.H. Infinity | Artisanal Crafts</title>
+    <title>
+      Traditional Handicrafts - K.H. Infinity | Premium Artisanal Crafts from
+      Bangladesh
+    </title>
+
+    <!-- Primary Meta Tags -->
     <meta
       name="description"
-      content="Exquisite handcrafted products showcasing traditional artistry. Premium quality handicrafts made by skilled artisans."
+      content="Exquisite handcrafted products showcasing traditional Bangladeshi artistry. Premium quality handicrafts including textiles, pottery, and wooden crafts made by skilled artisans."
     />
     <meta
       name="keywords"
-      content="handicrafts, artisanal crafts, traditional crafts, handmade products, K.H. Infinity, export"
+      content="handicrafts, artisanal crafts, traditional crafts, handmade products, Bangladeshi crafts, textiles, pottery, wooden crafts, K.H. Infinity, export, Bangladesh"
     />
+    <meta name="author" content="K.H. Infinity" />
+    <meta name="robots" content="index, follow" />
+
+    <!-- Open Graph / Facebook -->
+    <meta property="og:type" content="product" />
+    <meta property="og:url" content="https://khi.com.bd/products/handicrafts" />
+    <meta
+      property="og:title"
+      content="Traditional Handicrafts - K.H. Infinity | Premium Artisanal Crafts"
+    />
+    <meta
+      property="og:description"
+      content="Exquisite handcrafted products showcasing traditional Bangladeshi artistry. Premium quality handicrafts including textiles, pottery, and wooden crafts made by skilled artisans."
+    />
+    <meta
+      property="og:image"
+      content="https://khi.com.bd/images/products/handicrafts.webp"
+    />
+
+    <!-- Twitter -->
+    <meta property="twitter:card" content="summary_large_image" />
+    <meta
+      property="twitter:url"
+      content="https://khi.com.bd/products/handicrafts"
+    />
+    <meta
+      property="twitter:title"
+      content="Traditional Handicrafts - K.H. Infinity | Premium Artisanal Crafts"
+    />
+    <meta
+      property="twitter:description"
+      content="Exquisite handcrafted products showcasing traditional Bangladeshi artistry. Premium quality handicrafts including textiles, pottery, and wooden crafts made by skilled artisans."
+    />
+    <meta
+      property="twitter:image"
+      content="https://khi.com.bd/images/products/handicrafts.webp"
+    />
+
+    <!-- Favicon -->
     <link rel="icon" type="image/x-icon" href="/images/favicon.ico" />
+    <link
+      rel="apple-touch-icon"
+      sizes="180x180"
+      href="/images/apple-touch-icon.png"
+    />
+
+    <!-- Stylesheets -->
     <script src="https://cdn.tailwindcss.com"></script>
     <link rel="stylesheet" href="../css/style.css" />
     <link rel="stylesheet" href="../css/mobile.css" />
@@ -20,6 +71,65 @@
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css"
     />
+
+    <!-- Schema.org markup -->
+    <script type="application/ld+json">
+      {
+        "@context": "https://schema.org",
+        "@type": "Product",
+        "name": "Traditional Handicrafts",
+        "image": "https://khi.com.bd/images/products/handicrafts.webp",
+        "description": "Exquisite handcrafted products showcasing traditional Bangladeshi artistry.",
+        "brand": {
+          "@type": "Brand",
+          "name": "K.H. Infinity"
+        },
+        "offers": {
+          "@type": "AggregateOffer",
+          "priceCurrency": "USD",
+          "availability": "https://schema.org/InStock",
+          "seller": {
+            "@type": "Organization",
+            "name": "K.H. Infinity"
+          }
+        },
+        "category": "Traditional Crafts",
+        "material": ["Cotton", "Wood", "Clay", "Natural Fibers"],
+        "itemCondition": "https://schema.org/NewCondition",
+        "countryOfOrigin": {
+          "@type": "Country",
+          "name": "Bangladesh"
+        },
+        "aggregateRating": {
+          "@type": "AggregateRating",
+          "ratingValue": "4.9",
+          "reviewCount": "200"
+        },
+        "breadcrumb": {
+          "@type": "BreadcrumbList",
+          "itemListElement": [
+            {
+              "@type": "ListItem",
+              "position": 1,
+              "name": "Home",
+              "item": "https://khi.com.bd"
+            },
+            {
+              "@type": "ListItem",
+              "position": 2,
+              "name": "Products",
+              "item": "https://khi.com.bd/products"
+            },
+            {
+              "@type": "ListItem",
+              "position": 3,
+              "name": "Handicrafts",
+              "item": "https://khi.com.bd/products/handicrafts"
+            }
+          ]
+        }
+      }
+    </script>
   </head>
   <body class="font-sans bg-orange-50" data-theme="orange">
     <!-- Header -->
