--- a/products/milk-powder.html
+++ b/products/milk-powder.html
@@ -3,16 +3,66 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Premium Skimmed Milk Powder - K.H. Infinity | Dairy Products</title>
+    <title>
+      Premium Skimmed Milk Powder - K.H. Infinity | High Quality Dairy Products
+    </title>
+
+    <!-- Primary Meta Tags -->
     <meta
       name="description"
-      content="High-quality skimmed milk powder with excellent nutritional value. Rich in protein, calcium, and essential vitamins for a healthy lifestyle."
+      content="High-quality skimmed milk powder with excellent nutritional value. Rich in protein, calcium, and essential vitamins. Available in bulk and retail packaging for commercial and consumer use."
     />
     <meta
       name="keywords"
-      content="skimmed milk powder, dairy products, milk powder, protein, calcium, K.H. Infinity, import"
+      content="skimmed milk powder, dairy products, milk powder, protein powder, calcium rich, bulk milk powder, K.H. Infinity, import, Bangladesh"
     />
+    <meta name="author" content="K.H. Infinity" />
+    <meta name="robots" content="index, follow" />
+
+    <!-- Open Graph / Facebook -->
+    <meta property="og:type" content="product" />
+    <meta property="og:url" content="https://khi.com.bd/products/milk-powder" />
+    <meta
+      property="og:title"
+      content="Premium Skimmed Milk Powder - K.H. Infinity | High Quality Dairy Products"
+    />
+    <meta
+      property="og:description"
+      content="High-quality skimmed milk powder with excellent nutritional value. Rich in protein, calcium, and essential vitamins. Available in bulk and retail packaging for commercial and consumer use."
+    />
+    <meta
+      property="og:image"
+      content="https://khi.com.bd/images/products/milk-powder.webp"
+    />
+
+    <!-- Twitter -->
+    <meta property="twitter:card" content="summary_large_image" />
+    <meta
+      property="twitter:url"
+      content="https://khi.com.bd/products/milk-powder"
+    />
+    <meta
+      property="twitter:title"
+      content="Premium Skimmed Milk Powder - K.H. Infinity | High Quality Dairy Products"
+    />
+    <meta
+      property="twitter:description"
+      content="High-quality skimmed milk powder with excellent nutritional value. Rich in protein, calcium, and essential vitamins. Available in bulk and retail packaging for commercial and consumer use."
+    />
+    <meta
+      property="twitter:image"
+      content="https://khi.com.bd/images/products/milk-powder.webp"
+    />
+
+    <!-- Favicon -->
     <link rel="icon" type="image/x-icon" href="/images/favicon.ico" />
+    <link
+      rel="apple-touch-icon"
+      sizes="180x180"
+      href="/images/apple-touch-icon.png"
+    />
+
+    <!-- Stylesheets -->
     <script src="https://cdn.tailwindcss.com"></script>
     <link rel="stylesheet" href="../css/style.css" />
     <link rel="stylesheet" href="../css/mobile.css" />
@@ -20,6 +70,68 @@
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css"
     />
+
+    <!-- Schema.org markup -->
+    <script type="application/ld+json">
+      {
+        "@context": "https://schema.org",
+        "@type": "Product",
+        "name": "Premium Skimmed Milk Powder",
+        "image": "https://khi.com.bd/images/products/milk-powder.webp",
+        "description": "High-quality skimmed milk powder with excellent nutritional value.",
+        "brand": {
+          "@type": "Brand",
+          "name": "K.H. Infinity"
+        },
+        "offers": {
+          "@type": "AggregateOffer",
+          "priceCurrency": "USD",
+          "availability": "https://schema.org/InStock",
+          "seller": {
+            "@type": "Organization",
+            "name": "K.H. Infinity"
+          }
+        },
+        "nutrition": {
+          "@type": "NutritionInformation",
+          "calories": "357 kcal",
+          "proteinContent": "36g",
+          "fatContent": "0.1g",
+          "carbohydrateContent": "52g",
+          "servingSize": "100g",
+          "vitamins": ["Vitamin A", "Vitamin D", "Vitamin B12"],
+          "minerals": ["Calcium", "Iron", "Zinc"]
+        },
+        "aggregateRating": {
+          "@type": "AggregateRating",
+          "ratingValue": "4.8",
+          "reviewCount": "180"
+        },
+        "breadcrumb": {
+          "@type": "BreadcrumbList",
+          "itemListElement": [
+            {
+              "@type": "ListItem",
+              "position": 1,
+              "name": "Home",
+              "item": "https://khi.com.bd"
+            },
+            {
+              "@type": "ListItem",
+              "position": 2,
+              "name": "Products",
+              "item": "https://khi.com.bd/products"
+            },
+            {
+              "@type": "ListItem",
+              "position": 3,
+              "name": "Milk Powder",
+              "item": "https://khi.com.bd/products/milk-powder"
+            }
+          ]
+        }
+      }
+    </script>
   </head>
   <body class="font-sans bg-blue-50" data-theme="blue">
     <!-- Header -->
