--- a/products/potato.html
+++ b/products/potato.html
@@ -6,15 +6,60 @@
     <title>
       Fresh Potatoes - K.H. Infinity | Premium Agricultural Products
     </title>
+
+    <!-- Primary Meta Tags -->
     <meta
       name="description"
-      content="Premium quality fresh potatoes sourced from the finest farms. Perfect for commercial and retail use with consistent quality and size."
+      content="Premium quality fresh potatoes sourced from Bangladesh's finest farms. Perfect for commercial and retail use with consistent quality and size. Available in bulk quantities."
     />
     <meta
       name="keywords"
-      content="potatoes, fresh potatoes, agricultural products, vegetables, K.H. Infinity, export"
+      content="fresh potatoes, export potatoes, Bangladesh potatoes, agricultural products, vegetables, bulk potatoes, K.H. Infinity, export, Bangladesh"
     />
+    <meta name="author" content="K.H. Infinity" />
+    <meta name="robots" content="index, follow" />
+
+    <!-- Open Graph / Facebook -->
+    <meta property="og:type" content="product" />
+    <meta property="og:url" content="https://khi.com.bd/products/potato" />
+    <meta
+      property="og:title"
+      content="Fresh Potatoes - K.H. Infinity | Premium Agricultural Products"
+    />
+    <meta
+      property="og:description"
+      content="Premium quality fresh potatoes sourced from Bangladesh's finest farms. Perfect for commercial and retail use with consistent quality and size. Available in bulk quantities."
+    />
+    <meta
+      property="og:image"
+      content="https://khi.com.bd/images/products/potato.webp"
+    />
+
+    <!-- Twitter -->
+    <meta property="twitter:card" content="summary_large_image" />
+    <meta property="twitter:url" content="https://khi.com.bd/products/potato" />
+    <meta
+      property="twitter:title"
+      content="Fresh Potatoes - K.H. Infinity | Premium Agricultural Products"
+    />
+    <meta
+      property="twitter:description"
+      content="Premium quality fresh potatoes sourced from Bangladesh's finest farms. Perfect for commercial and retail use with consistent quality and size. Available in bulk quantities."
+    />
+    <meta
+      property="twitter:image"
+      content="https://khi.com.bd/images/products/potato.webp"
+    />
+
+    <!-- Favicon -->
     <link rel="icon" type="image/x-icon" href="/images/favicon.ico" />
+    <link
+      rel="apple-touch-icon"
+      sizes="180x180"
+      href="/images/apple-touch-icon.png"
+    />
+
+    <!-- Stylesheets -->
     <script src="https://cdn.tailwindcss.com"></script>
     <link rel="stylesheet" href="../css/style.css" />
     <link rel="stylesheet" href="../css/mobile.css" />
@@ -22,6 +67,72 @@
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css"
     />
+
+    <!-- Schema.org markup -->
+    <script type="application/ld+json">
+      {
+        "@context": "https://schema.org",
+        "@type": "Product",
+        "name": "Fresh Potatoes",
+        "image": "https://khi.com.bd/images/products/potato.webp",
+        "description": "Premium quality fresh potatoes sourced from Bangladesh's finest farms.",
+        "brand": {
+          "@type": "Brand",
+          "name": "K.H. Infinity"
+        },
+        "offers": {
+          "@type": "AggregateOffer",
+          "priceCurrency": "USD",
+          "availability": "https://schema.org/InStock",
+          "seller": {
+            "@type": "Organization",
+            "name": "K.H. Infinity"
+          }
+        },
+        "nutrition": {
+          "@type": "NutritionInformation",
+          "calories": "77 kcal",
+          "proteinContent": "2g",
+          "fatContent": "0.1g",
+          "carbohydrateContent": "17g",
+          "fiberContent": "2.2g",
+          "servingSize": "100g"
+        },
+        "category": "Fresh Produce",
+        "countryOfOrigin": {
+          "@type": "Country",
+          "name": "Bangladesh"
+        },
+        "aggregateRating": {
+          "@type": "AggregateRating",
+          "ratingValue": "4.8",
+          "reviewCount": "160"
+        },
+        "breadcrumb": {
+          "@type": "BreadcrumbList",
+          "itemListElement": [
+            {
+              "@type": "ListItem",
+              "position": 1,
+              "name": "Home",
+              "item": "https://khi.com.bd"
+            },
+            {
+              "@type": "ListItem",
+              "position": 2,
+              "name": "Products",
+              "item": "https://khi.com.bd/products"
+            },
+            {
+              "@type": "ListItem",
+              "position": 3,
+              "name": "Potatoes",
+              "item": "https://khi.com.bd/products/potato"
+            }
+          ]
+        }
+      }
+    </script>
   </head>
   <body class="font-sans bg-green-50" data-theme="green">
     <!-- Header -->
