--- a/products/pulses.html
+++ b/products/pulses.html
@@ -4,15 +4,60 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Premium Pulses - K.H. Infinity | Natural Grains & Legumes</title>
+
+    <!-- Primary Meta Tags -->
     <meta
       name="description"
-      content="High-quality pulses including lentils, chickpeas, and other legumes. Premium quality grains sourced from the world's finest producers."
+      content="High-quality pulses including lentils, chickpeas, and other legumes. Premium quality grains sourced from the world's finest producers. Available in bulk and retail packaging."
     />
     <meta
       name="keywords"
-      content="pulses, lentils, chickpeas, legumes, grains, K.H. Infinity, import"
+      content="pulses, lentils, chickpeas, legumes, grains, bulk pulses, natural legumes, K.H. Infinity, import, Bangladesh"
     />
+    <meta name="author" content="K.H. Infinity" />
+    <meta name="robots" content="index, follow" />
+
+    <!-- Open Graph / Facebook -->
+    <meta property="og:type" content="product" />
+    <meta property="og:url" content="https://khi.com.bd/products/pulses" />
+    <meta
+      property="og:title"
+      content="Premium Pulses - K.H. Infinity | Natural Grains & Legumes"
+    />
+    <meta
+      property="og:description"
+      content="High-quality pulses including lentils, chickpeas, and other legumes. Premium quality grains sourced from the world's finest producers. Available in bulk and retail packaging."
+    />
+    <meta
+      property="og:image"
+      content="https://khi.com.bd/images/products/pulses.webp"
+    />
+
+    <!-- Twitter -->
+    <meta property="twitter:card" content="summary_large_image" />
+    <meta property="twitter:url" content="https://khi.com.bd/products/pulses" />
+    <meta
+      property="twitter:title"
+      content="Premium Pulses - K.H. Infinity | Natural Grains & Legumes"
+    />
+    <meta
+      property="twitter:description"
+      content="High-quality pulses including lentils, chickpeas, and other legumes. Premium quality grains sourced from the world's finest producers. Available in bulk and retail packaging."
+    />
+    <meta
+      property="twitter:image"
+      content="https://khi.com.bd/images/products/pulses.webp"
+    />
+
+    <!-- Favicon -->
     <link rel="icon" type="image/x-icon" href="/images/favicon.ico" />
+    <link
+      rel="apple-touch-icon"
+      sizes="180x180"
+      href="/images/apple-touch-icon.png"
+    />
+
+    <!-- Stylesheets -->
     <script src="https://cdn.tailwindcss.com"></script>
     <link rel="stylesheet" href="../css/style.css" />
     <link rel="stylesheet" href="../css/mobile.css" />
@@ -20,6 +65,71 @@
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css"
     />
+
+    <!-- Schema.org markup -->
+    <script type="application/ld+json">
+      {
+        "@context": "https://schema.org",
+        "@type": "Product",
+        "name": "Premium Pulses",
+        "image": "https://khi.com.bd/images/products/pulses.webp",
+        "description": "High-quality pulses including lentils, chickpeas, and other legumes.",
+        "brand": {
+          "@type": "Brand",
+          "name": "K.H. Infinity"
+        },
+        "offers": {
+          "@type": "AggregateOffer",
+          "priceCurrency": "USD",
+          "availability": "https://schema.org/InStock",
+          "seller": {
+            "@type": "Organization",
+            "name": "K.H. Infinity"
+          }
+        },
+        "category": "Grains & Legumes",
+        "hasVariant": [
+          {
+            "@type": "Product",
+            "name": "Premium Lentils",
+            "description": "High-quality lentils perfect for soups and stews"
+          },
+          {
+            "@type": "Product",
+            "name": "Premium Chickpeas",
+            "description": "Premium grade chickpeas for various culinary applications"
+          }
+        ],
+        "aggregateRating": {
+          "@type": "AggregateRating",
+          "ratingValue": "4.8",
+          "reviewCount": "175"
+        },
+        "breadcrumb": {
+          "@type": "BreadcrumbList",
+          "itemListElement": [
+            {
+              "@type": "ListItem",
+              "position": 1,
+              "name": "Home",
+              "item": "https://khi.com.bd"
+            },
+            {
+              "@type": "ListItem",
+              "position": 2,
+              "name": "Products",
+              "item": "https://khi.com.bd/products"
+            },
+            {
+              "@type": "ListItem",
+              "position": 3,
+              "name": "Pulses",
+              "item": "https://khi.com.bd/products/pulses"
+            }
+          ]
+        }
+      }
+    </script>
   </head>
   <body class="font-sans bg-amber-50" data-theme="amber">
     <!-- Header -->
