--- a/products/soyabean-oil.html
+++ b/products/soyabean-oil.html
@@ -4,15 +4,66 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Premium Soyabean Oil - K.H. Infinity | Pure Cooking Oil</title>
+
+    <!-- Primary Meta Tags -->
     <meta
       name="description"
-      content="High-quality soyabean oil for cooking and food processing. Premium grade oil with excellent nutritional value."
+      content="High-quality soyabean oil for cooking and food processing. Premium grade oil with excellent nutritional value, rich in healthy fats and Vitamin E. Available in bulk and retail packaging."
     />
     <meta
       name="keywords"
-      content="soyabean oil, soybean oil, cooking oil, vegetable oil, K.H. Infinity, import"
+      content="soyabean oil, soybean oil, cooking oil, vegetable oil, bulk oil, healthy cooking oil, K.H. Infinity, import, Bangladesh"
     />
+    <meta name="author" content="K.H. Infinity" />
+    <meta name="robots" content="index, follow" />
+
+    <!-- Open Graph / Facebook -->
+    <meta property="og:type" content="product" />
+    <meta
+      property="og:url"
+      content="https://khi.com.bd/products/soyabean-oil"
+    />
+    <meta
+      property="og:title"
+      content="Premium Soyabean Oil - K.H. Infinity | Pure Cooking Oil"
+    />
+    <meta
+      property="og:description"
+      content="High-quality soyabean oil for cooking and food processing. Premium grade oil with excellent nutritional value, rich in healthy fats and Vitamin E. Available in bulk and retail packaging."
+    />
+    <meta
+      property="og:image"
+      content="https://khi.com.bd/images/products/soyabean-oil.webp"
+    />
+
+    <!-- Twitter -->
+    <meta property="twitter:card" content="summary_large_image" />
+    <meta
+      property="twitter:url"
+      content="https://khi.com.bd/products/soyabean-oil"
+    />
+    <meta
+      property="twitter:title"
+      content="Premium Soyabean Oil - K.H. Infinity | Pure Cooking Oil"
+    />
+    <meta
+      property="twitter:description"
+      content="High-quality soyabean oil for cooking and food processing. Premium grade oil with excellent nutritional value, rich in healthy fats and Vitamin E. Available in bulk and retail packaging."
+    />
+    <meta
+      property="twitter:image"
+      content="https://khi.com.bd/images/products/soyabean-oil.webp"
+    />
+
+    <!-- Favicon -->
     <link rel="icon" type="image/x-icon" href="/images/favicon.ico" />
+    <link
+      rel="apple-touch-icon"
+      sizes="180x180"
+      href="/images/apple-touch-icon.png"
+    />
+
+    <!-- Stylesheets -->
     <script src="https://cdn.tailwindcss.com"></script>
     <link rel="stylesheet" href="../css/style.css" />
     <link rel="stylesheet" href="../css/mobile.css" />
@@ -20,6 +71,69 @@
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css"
     />
+
+    <!-- Schema.org markup -->
+    <script type="application/ld+json">
+      {
+        "@context": "https://schema.org",
+        "@type": "Product",
+        "name": "Premium Soyabean Oil",
+        "image": "https://khi.com.bd/images/products/soyabean-oil.webp",
+        "description": "High-quality soyabean oil for cooking and food processing.",
+        "brand": {
+          "@type": "Brand",
+          "name": "K.H. Infinity"
+        },
+        "offers": {
+          "@type": "AggregateOffer",
+          "priceCurrency": "USD",
+          "availability": "https://schema.org/InStock",
+          "seller": {
+            "@type": "Organization",
+            "name": "K.H. Infinity"
+          }
+        },
+        "nutrition": {
+          "@type": "NutritionInformation",
+          "calories": "884 kcal",
+          "fatContent": "100g",
+          "saturatedFatContent": "16g",
+          "monounsaturatedFatContent": "23g",
+          "polyunsaturatedFatContent": "58g",
+          "servingSize": "100ml",
+          "vitamins": ["Vitamin E", "Vitamin K"]
+        },
+        "category": "Cooking Oils",
+        "aggregateRating": {
+          "@type": "AggregateRating",
+          "ratingValue": "4.7",
+          "reviewCount": "190"
+        },
+        "breadcrumb": {
+          "@type": "BreadcrumbList",
+          "itemListElement": [
+            {
+              "@type": "ListItem",
+              "position": 1,
+              "name": "Home",
+              "item": "https://khi.com.bd"
+            },
+            {
+              "@type": "ListItem",
+              "position": 2,
+              "name": "Products",
+              "item": "https://khi.com.bd/products"
+            },
+            {
+              "@type": "ListItem",
+              "position": 3,
+              "name": "Soyabean Oil",
+              "item": "https://khi.com.bd/products/soyabean-oil"
+            }
+          ]
+        }
+      }
+    </script>
   </head>
   <body class="font-sans bg-yellow-50" data-theme="yellow">
     <!-- Header -->
