--- a/products/tarpaulin.html
+++ b/products/tarpaulin.html
@@ -4,15 +4,63 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Industrial Tarpaulin - K.H. Infinity | Heavy-Duty Protection</title>
+
+    <!-- Primary Meta Tags -->
     <meta
       name="description"
-      content="Premium quality industrial tarpaulin for superior protection. Durable, weather-resistant, and versatile for various commercial applications."
+      content="Premium quality industrial tarpaulin for superior protection. Durable, weather-resistant, and versatile for various commercial applications. Available in multiple sizes and specifications."
     />
     <meta
       name="keywords"
-      content="tarpaulin, industrial tarpaulin, heavy duty tarp, waterproof cover, K.H. Infinity, import"
+      content="tarpaulin, industrial tarpaulin, heavy duty tarp, waterproof cover, bulk tarpaulin, commercial tarpaulin, K.H. Infinity, import, Bangladesh"
     />
+    <meta name="author" content="K.H. Infinity" />
+    <meta name="robots" content="index, follow" />
+
+    <!-- Open Graph / Facebook -->
+    <meta property="og:type" content="product" />
+    <meta property="og:url" content="https://khi.com.bd/products/tarpaulin" />
+    <meta
+      property="og:title"
+      content="Industrial Tarpaulin - K.H. Infinity | Heavy-Duty Protection"
+    />
+    <meta
+      property="og:description"
+      content="Premium quality industrial tarpaulin for superior protection. Durable, weather-resistant, and versatile for various commercial applications. Available in multiple sizes and specifications."
+    />
+    <meta
+      property="og:image"
+      content="https://khi.com.bd/images/products/tarpaulin.webp"
+    />
+
+    <!-- Twitter -->
+    <meta property="twitter:card" content="summary_large_image" />
+    <meta
+      property="twitter:url"
+      content="https://khi.com.bd/products/tarpaulin"
+    />
+    <meta
+      property="twitter:title"
+      content="Industrial Tarpaulin - K.H. Infinity | Heavy-Duty Protection"
+    />
+    <meta
+      property="twitter:description"
+      content="Premium quality industrial tarpaulin for superior protection. Durable, weather-resistant, and versatile for various commercial applications. Available in multiple sizes and specifications."
+    />
+    <meta
+      property="twitter:image"
+      content="https://khi.com.bd/images/products/tarpaulin.webp"
+    />
+
+    <!-- Favicon -->
     <link rel="icon" type="image/x-icon" href="/images/favicon.ico" />
+    <link
+      rel="apple-touch-icon"
+      sizes="180x180"
+      href="/images/apple-touch-icon.png"
+    />
+
+    <!-- Stylesheets -->
     <script src="https://cdn.tailwindcss.com"></script>
     <link rel="stylesheet" href="../css/style.css" />
     <link rel="stylesheet" href="../css/mobile.css" />
@@ -20,6 +68,77 @@
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css"
     />
+
+    <!-- Schema.org markup -->
+    <script type="application/ld+json">
+      {
+        "@context": "https://schema.org",
+        "@type": "Product",
+        "name": "Industrial Tarpaulin",
+        "image": "https://khi.com.bd/images/products/tarpaulin.webp",
+        "description": "Premium quality industrial tarpaulin for superior protection.",
+        "brand": {
+          "@type": "Brand",
+          "name": "K.H. Infinity"
+        },
+        "offers": {
+          "@type": "AggregateOffer",
+          "priceCurrency": "USD",
+          "availability": "https://schema.org/InStock",
+          "seller": {
+            "@type": "Organization",
+            "name": "K.H. Infinity"
+          }
+        },
+        "category": "Industrial Products",
+        "material": "High-density polyethylene (HDPE)",
+        "additionalProperty": [
+          {
+            "@type": "PropertyValue",
+            "name": "GSM Range",
+            "value": "80-200 GSM"
+          },
+          {
+            "@type": "PropertyValue",
+            "name": "Treatment",
+            "value": "UV stabilized, fungus resistant"
+          },
+          {
+            "@type": "PropertyValue",
+            "name": "Features",
+            "value": ["Waterproof", "UV resistant", "Tear resistant"]
+          }
+        ],
+        "aggregateRating": {
+          "@type": "AggregateRating",
+          "ratingValue": "4.7",
+          "reviewCount": "145"
+        },
+        "breadcrumb": {
+          "@type": "BreadcrumbList",
+          "itemListElement": [
+            {
+              "@type": "ListItem",
+              "position": 1,
+              "name": "Home",
+              "item": "https://khi.com.bd"
+            },
+            {
+              "@type": "ListItem",
+              "position": 2,
+              "name": "Products",
+              "item": "https://khi.com.bd/products"
+            },
+            {
+              "@type": "ListItem",
+              "position": 3,
+              "name": "Tarpaulin",
+              "item": "https://khi.com.bd/products/tarpaulin"
+            }
+          ]
+        }
+      }
+    </script>
   </head>
   <body class="font-sans bg-slate-50" data-theme="slate">
     <!-- Header -->
