--- a/services.html
+++ b/services.html
@@ -3,16 +3,63 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Our Services - K.H. Infinity | Global Trade Solutions</title>
+    <title>
+      Import Export Services - K.H. Infinity | Global Trade Solutions Bangladesh
+    </title>
+
+    <!-- Primary Meta Tags -->
     <meta
       name="description"
-      content="Comprehensive import-export services, logistics solutions, and trade consulting by K.H. Infinity."
+      content="Professional import-export services including product sourcing, quality assurance, documentation support, market access, and trade compliance. Your trusted partner in global trade."
     />
     <meta
       name="keywords"
-      content="import export, logistics, trade consulting, K.H. Infinity, services"
+      content="import export services, trade services, global trade solutions, product sourcing, quality assurance, trade documentation, market access, K.H. Infinity, Bangladesh"
     />
+    <meta name="author" content="K.H. Infinity" />
+    <meta name="robots" content="index, follow" />
+
+    <!-- Open Graph / Facebook -->
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://khi.com.bd/services" />
+    <meta
+      property="og:title"
+      content="Import Export Services - K.H. Infinity | Global Trade Solutions"
+    />
+    <meta
+      property="og:description"
+      content="Professional import-export services including product sourcing, quality assurance, documentation support, market access, and trade compliance. Your trusted partner in global trade."
+    />
+    <meta
+      property="og:image"
+      content="https://khi.com.bd/images/cover/kh1.webp"
+    />
+
+    <!-- Twitter -->
+    <meta property="twitter:card" content="summary_large_image" />
+    <meta property="twitter:url" content="https://khi.com.bd/services" />
+    <meta
+      property="twitter:title"
+      content="Import Export Services - K.H. Infinity | Global Trade Solutions"
+    />
+    <meta
+      property="twitter:description"
+      content="Professional import-export services including product sourcing, quality assurance, documentation support, market access, and trade compliance. Your trusted partner in global trade."
+    />
+    <meta
+      property="twitter:image"
+      content="https://khi.com.bd/images/cover/kh1.webp"
+    />
+
+    <!-- Favicon -->
     <link rel="icon" type="image/x-icon" href="/images/favicon.ico" />
+    <link
+      rel="apple-touch-icon"
+      sizes="180x180"
+      href="/images/apple-touch-icon.png"
+    />
+
+    <!-- Stylesheets -->
     <script src="https://cdn.tailwindcss.com"></script>
     <link rel="stylesheet" href="css/style.css" />
     <link rel="stylesheet" href="css/mobile.css" />
@@ -20,6 +67,64 @@
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css"
     />
+
+    <!-- Schema.org markup -->
+    <script type="application/ld+json">
+      {
+        "@context": "https://schema.org",
+        "@type": "WebPage",
+        "name": "Import Export Services",
+        "description": "Professional import-export services by K.H. Infinity",
+        "url": "https://khi.com.bd/services",
+        "mainEntity": {
+          "@type": "Organization",
+          "name": "K.H. Infinity",
+          "offers": [
+            {
+              "@type": "Offer",
+              "itemOffered": {
+                "@type": "Service",
+                "name": "Import Services",
+                "description": "Comprehensive import services including product sourcing, quality assurance, and documentation support"
+              }
+            },
+            {
+              "@type": "Offer",
+              "itemOffered": {
+                "@type": "Service",
+                "name": "Export Services",
+                "description": "Professional export services including market access, compliance, and quality control"
+              }
+            },
+            {
+              "@type": "Offer",
+              "itemOffered": {
+                "@type": "Service",
+                "name": "Trade Consulting",
+                "description": "Expert guidance on international trade regulations and documentation"
+              }
+            }
+          ]
+        },
+        "breadcrumb": {
+          "@type": "BreadcrumbList",
+          "itemListElement": [
+            {
+              "@type": "ListItem",
+              "position": 1,
+              "name": "Home",
+              "item": "https://khi.com.bd"
+            },
+            {
+              "@type": "ListItem",
+              "position": 2,
+              "name": "Services",
+              "item": "https://khi.com.bd/services"
+            }
+          ]
+        }
+      }
+    </script>
   </head>
   <body class="font-sans bg-gray-50" data-theme="gray">
     <!-- Header -->
