--- a/products/sugar.html
+++ b/products/sugar.html
@@ -4,15 +4,60 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Premium Sugar - K.H. Infinity | Pure Sweetness</title>
+
+    <!-- Primary Meta Tags -->
     <meta
       name="description"
-      content="High-quality refined sugar with exceptional purity. Premium sugar products for commercial and industrial use."
+      content="High-quality refined sugar with exceptional purity. Premium sugar products for commercial, industrial, and retail use. Available in various grades and packaging options."
     />
     <meta
       name="keywords"
-      content="sugar, refined sugar, white sugar, crystal sugar, K.H. Infinity, import"
+      content="sugar, refined sugar, white sugar, crystal sugar, bulk sugar, commercial sugar, K.H. Infinity, import, Bangladesh"
     />
+    <meta name="author" content="K.H. Infinity" />
+    <meta name="robots" content="index, follow" />
+
+    <!-- Open Graph / Facebook -->
+    <meta property="og:type" content="product" />
+    <meta property="og:url" content="https://khi.com.bd/products/sugar" />
+    <meta
+      property="og:title"
+      content="Premium Sugar - K.H. Infinity | Pure Sweetness"
+    />
+    <meta
+      property="og:description"
+      content="High-quality refined sugar with exceptional purity. Premium sugar products for commercial, industrial, and retail use. Available in various grades and packaging options."
+    />
+    <meta
+      property="og:image"
+      content="https://khi.com.bd/images/products/sugar.webp"
+    />
+
+    <!-- Twitter -->
+    <meta property="twitter:card" content="summary_large_image" />
+    <meta property="twitter:url" content="https://khi.com.bd/products/sugar" />
+    <meta
+      property="twitter:title"
+      content="Premium Sugar - K.H. Infinity | Pure Sweetness"
+    />
+    <meta
+      property="twitter:description"
+      content="High-quality refined sugar with exceptional purity. Premium sugar products for commercial, industrial, and retail use. Available in various grades and packaging options."
+    />
+    <meta
+      property="twitter:image"
+      content="https://khi.com.bd/images/products/sugar.webp"
+    />
+
+    <!-- Favicon -->
     <link rel="icon" type="image/x-icon" href="/images/favicon.ico" />
+    <link
+      rel="apple-touch-icon"
+      sizes="180x180"
+      href="/images/apple-touch-icon.png"
+    />
+
+    <!-- Stylesheets -->
     <script src="https://cdn.tailwindcss.com"></script>
     <link rel="stylesheet" href="../css/style.css" />
     <link rel="stylesheet" href="../css/mobile.css" />
@@ -20,6 +65,77 @@
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css"
     />
+
+    <!-- Schema.org markup -->
+    <script type="application/ld+json">
+      {
+        "@context": "https://schema.org",
+        "@type": "Product",
+        "name": "Premium Sugar",
+        "image": "https://khi.com.bd/images/products/sugar.webp",
+        "description": "High-quality refined sugar with exceptional purity.",
+        "brand": {
+          "@type": "Brand",
+          "name": "K.H. Infinity"
+        },
+        "offers": {
+          "@type": "AggregateOffer",
+          "priceCurrency": "USD",
+          "availability": "https://schema.org/InStock",
+          "seller": {
+            "@type": "Organization",
+            "name": "K.H. Infinity"
+          }
+        },
+        "nutrition": {
+          "@type": "NutritionInformation",
+          "calories": "400 kcal",
+          "carbohydrateContent": "100g",
+          "servingSize": "100g"
+        },
+        "category": "Sweeteners",
+        "additionalProperty": [
+          {
+            "@type": "PropertyValue",
+            "name": "Purity",
+            "value": "99.9%"
+          },
+          {
+            "@type": "PropertyValue",
+            "name": "Crystal Size",
+            "value": "0.5mm - 1.0mm"
+          }
+        ],
+        "aggregateRating": {
+          "@type": "AggregateRating",
+          "ratingValue": "4.8",
+          "reviewCount": "165"
+        },
+        "breadcrumb": {
+          "@type": "BreadcrumbList",
+          "itemListElement": [
+            {
+              "@type": "ListItem",
+              "position": 1,
+              "name": "Home",
+              "item": "https://khi.com.bd"
+            },
+            {
+              "@type": "ListItem",
+              "position": 2,
+              "name": "Products",
+              "item": "https://khi.com.bd/products"
+            },
+            {
+              "@type": "ListItem",
+              "position": 3,
+              "name": "Sugar",
+              "item": "https://khi.com.bd/products/sugar"
+            }
+          ]
+        }
+      }
+    </script>
   </head>
   <body class="font-sans bg-sky-50" data-theme="sky">
     <!-- Header -->
